RanjitaDhruv/src/objects/Accessories_to_SFA_Field_Mappings__mdt.object
<CustomObject>
    <fields>
        <fullName>Accessories_Field__c</fullName>
        <label>Accessories Field</label>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Accessories_to_SFA_Field_Mappingss1</relationshipLabel>
        <relationshipName>Accessories_to_SFA_Field_Mappingss1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Accessories_Object__c</fullName>
        <label>Accessories Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Accessories_to_SFA_Field_Mappingss1</relationshipLabel>
        <relationshipName>Accessories_to_SFA_Field_Mappingss1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>SFA_Field__c</fullName>
        <label>SFA Field</label>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Accessories_to_SFA_Field_Mappingss</relationshipLabel>
        <relationshipName>Accessories_to_SFA_Field_Mappingss</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>SFA_Object__c</fullName>
        <label>SFA Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Accessories_to_SFA_Field_Mappingss</relationshipLabel>
        <relationshipName>Accessories_to_SFA_Field_Mappingss</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Accessories to SFA Field Mappings</label>
    <pluralLabel>Accessories to SFA Field Mappingss</pluralLabel>
</CustomObject>